[lizeyang] feat: add aside content

--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <aside>
+      <section>
+        <h1>About</h1>
+        <p>There are moments in life when you miss someone so much that you just want to pick them from your dreams and hug them for real! Dream what you want to dream;go where you want to go;be what you want to be,because you have only one life and one chance to do all the things you want to do.</p>
+      </section>
+      <section>
+        <h1>Archives</h1>
+        <ul>
+          <li><a href="">January 2020</a></li>
+          <li><a href="">December 2019</a></li>
+          <li><a href="">November 2019</a></li>
+          <li><a href="">October 2019</a></li>
+          <li><a href="">September 2019</a></li>
+          <li><a href="">August 2019</a></li>
+          <li><a href="">July 2019</a></li>
+          <li><a href="">June 2019</a></li>
+          <li><a href="">May 2019</a></li>
+          <li><a href="">April 2019</a></li>
+        </ul>
+      </section>
+    </aside>
+  </main>
   <script src="src/app.js"></script>
 </body>
 </html>
