[lizeyang] feat: add article part content

--- a/index.html
+++ b/index.html
@@ -47,6 +47,38 @@
         </ul>
       </section>
     </aside>
+    <article>
+      <section class="article">
+        <figure>
+          <img src="./src/image/modal.jpg" alt="图片" class="article-image">
+          <figcaption>
+            <h1 class="article-title">Article 1</h1>
+            <p class="article-content">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-more">View details >></p>
+          </figcaption>
+        </figure>
+      </section>
+      <section class="article">
+        <figure>
+          <img src="./src/image/modal.jpg" alt="图片" class="article-image">
+          <figcaption>
+            <h1 class="article-title">Article 1</h1>
+            <p class="article-content">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-more">View details >></p>
+          </figcaption>
+        </figure>
+      </section>
+      <section class="article">
+        <figure>
+          <img src="./src/image/modal.jpg" alt="图片" class="article-image">
+          <figcaption>
+            <h1 class="article-title">Article 1</h1>
+            <p class="article-content">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-more">View details >></p>
+          </figcaption>
+        </figure>
+      </section>
+    </article>
   </main>
   <script src="src/app.js"></script>
 </body>
