[lizeyang] feat: add article part style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="main">
     <aside class="asider">
       <section class="about-box">
         <h1 class="asider-title">About</h1>
@@ -47,33 +47,33 @@
         </ul>
       </section>
     </aside>
-    <article>
+    <article class="main-cotent">
       <section class="article">
-        <figure>
+        <figure class="article-content">
           <img src="./src/image/modal.jpg" alt="图片" class="article-image">
-          <figcaption>
+          <figcaption class="article-describe">
             <h1 class="article-title">Article 1</h1>
-            <p class="article-content">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
             <p class="article-more">View details >></p>
           </figcaption>
         </figure>
       </section>
       <section class="article">
-        <figure>
+        <figure class="article-content">
           <img src="./src/image/modal.jpg" alt="图片" class="article-image">
-          <figcaption>
+          <figcaption class="article-describe">
             <h1 class="article-title">Article 1</h1>
-            <p class="article-content">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.</p>
             <p class="article-more">View details >></p>
           </figcaption>
         </figure>
       </section>
       <section class="article">
-        <figure>
+        <figure class="article-content">
           <img src="./src/image/modal.jpg" alt="图片" class="article-image">
-          <figcaption>
+          <figcaption class="article-describe">
             <h1 class="article-title">Article 1</h1>
-            <p class="article-content">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
             <p class="article-more">View details >></p>
           </figcaption>
         </figure>
