[lizeyang] feat: add login part content

--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
         </figure>
       </section>
     </article>
+    <aside class="login">
+      <section class="login-content">
+        <input type="text" placeholder="Eamil address">
+        <input type="password" placeholder="password">
+        <section>
+          <input type="checkbox">
+          <span>Remember me</span>
+        </section>
+        <button>Sign in</button>
+      </section>
+    </aside>
   </main>
   <script src="src/app.js"></script>
 </body>
