[lizeyang] feat: add login part style

--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
     </article>
     <aside class="login">
       <section class="login-content">
-        <input type="text" placeholder="Eamil address">
-        <input type="password" placeholder="password">
-        <section>
+        <input type="text" placeholder="Eamil address" class="email"><input type="password" placeholder="Password" class="password">
+        <section class="checkbox">
           <input type="checkbox">
           <span>Remember me</span>
         </section>
-        <button>Sign in</button>
+        <button class="sign-in">Sign in</button>
       </section>
     </aside>
   </main>
