[lizeyang] feat: add footer part

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
       </section>
     </aside>
   </main>
+  <footer class="footer">
+    <p>Advanced CSS homework built by <a href="">@Your name</a><br><a href="">Back to top</a></p>
+  </footer>
   <script src="src/app.js"></script>
 </body>
 </html>
