[lizeyang] feat: using float in main part

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <figure class="article-content">
           <img src="./src/image/modal.jpg" alt="图片" class="article-image">
           <figcaption class="article-describe">
-            <h1 class="article-title">Article 1</h1>
-            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <h1 class="article-title">Article 2</h1>
+            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.</p>
             <p class="article-more">View details >></p>
           </figcaption>
         </figure>
@@ -63,7 +63,7 @@
           <img src="./src/image/modal.jpg" alt="图片" class="article-image">
           <figcaption class="article-describe">
             <h1 class="article-title">Article 1</h1>
-            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, too.</p>
+            <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.If you feel that it hurts you,it probably hurts the other person, </p>
             <p class="article-more">View details >></p>
           </figcaption>
         </figure>
@@ -72,7 +72,7 @@
         <figure class="article-content">
           <img src="./src/image/modal.jpg" alt="图片" class="article-image">
           <figcaption class="article-describe">
-            <h1 class="article-title">Article 1</h1>
+            <h1 class="article-title">Article 3</h1>
             <p class="article-text">May you have enough happiness to make you sweet,enough trials to make you strong,enough sorrow to keep you human,enough hope to make you happy? Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.Always put yourself in others’shoes.If you feel that it hurts you,it probably hurts the other person, too.</p>
             <p class="article-more">View details >></p>
           </figcaption>
